# matplotgl

./: .gitignore  CMakeLists.txt  vcpkg-configuration.json  vcpkg.json
app/matplotapp/: main.cpp  main_window.cpp  main_window.h  main_window.ui  matplotapp.sln  matplotapp.slnx  matplotapp.vcxproj  matplotapp.vcxproj.filters
cmake/: matplotglConfig.cmake.in
gui/: main_window.ui  matqt_widget.ui
include/: axis_widget.h  colorbar.h  colormap.h  glview.h  legend_box.h  main_widget.h  main_window.h  matqt.h  matqt_widget.h  opengl.h  opengl_view.h  shader.h  title_widget.h  ui_matqt_widget.h  util.h
mak/: MatPlotGL.sln  MatPlotGL.slnx  MatPlotTest.vcxproj  MatPlotTest.vcxproj.filters
ports/matplotgl/: portfile.cmake  vcpkg.json
ports/matplotplusplus/: portfile.cmake  vcpkg.json
ports/qtbase/: portfile.cmake  vcpkg.json
src/: axis_widget.cpp  colorbar.cpp  colormap.cpp  glview.cpp  legend_box.cpp  main.cpp  main_widget.cpp  main_window.cpp  matqt.cpp  matqt_widget.cpp  opengl.cpp  opengl_view.cpp  shader.cpp  title_widget.cpp
